--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,7 @@
-Bedwars Plus by TTNO1
-Source Code Coming Soon.
+# Bedwars Plus
+###### By TTNO1
+<br>
+
+[![Bedwars Plus+](https://i.ibb.co/chvVtKv/Logo-Big.png)](https://www.spigotmc.org/resources/bedwars-plus.78867/)
+
+Bedwars Plus is a free Bedwars plugin intended to bring Bedwars to Minecraft servers large and small.
